[package]
name = "githome"
version = "0.3.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>"]
edition = "2021"
publish = false

[dependencies]
opener = "0.5.2"
git-repository = { version = "0.35", default-features = false }
git-discover = { version = "0.13.0", default-features = false }
xflags = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
