[package]
name = "githome"
version = "0.3.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>"]
edition = "2021"
publish = false

[dependencies]
opener = "0.5.2"
gix = { version = "0.39", default-features = false }
gix-discover = { version = "0.15.0", default-features = false }
xflags = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
