[package]
name = "githome"
version = "0.3.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>"]
edition = "2021"
publish = false

[dependencies]
gix = { version = "0.58", default-features = false }
gix-discover = { version = "0.29.0", default-features = false }
opener = "0.6.1"
xflags = "0.3.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
